--- a/op_chains_tracking/l2_revenue_tracking.ipynb
+++ b/op_chains_tracking/l2_revenue_tracking.ipynb
@@ -37,8 +37,11 @@
     "]\n",
     "\n",
     "# Aiming to eventually read from superchain-resitry + some non-superchain static adds\n",
-    "chains_rpcs = pd.read_csv('inputs/chain_metadata.csv').values.tolist()\n",
-    "print(chains_rpcs)"
+    "chains_rpcs = pd.read_csv('inputs/chain_metadata.csv')\n",
+    "# print(chains_rpcs.columns)\n",
+    "chains_rpcs = chains_rpcs[~(chains_rpcs['rpc_url'] == ' ') & ~(chains_rpcs['op_based_version'].str.contains('legacy'))]\n",
+    "# chains_rpcs = chains_rpcs.values.tolist()\n",
+    "display(chains_rpcs)"
    ]
   },
   {
@@ -62,12 +65,13 @@
    "source": [
     "data_arr = []\n",
     "\n",
-    "for chain in chains_rpcs:\n",
-    "    chain_name = chain[0]\n",
-    "    rpc = chain[1]\n",
-    "    gas_token = chain[2]\n",
-    "    da_layer = chain[3]\n",
-    "    is_superchain_registry = chain[4]\n",
+    "for index, chain in chains_rpcs.iterrows():\n",
+    "    chain_name = chain['chain_name']\n",
+    "    print(chain_name)\n",
+    "    rpc = chain['rpc_url']\n",
+    "    gas_token = chain['gas_token']\n",
+    "    da_layer = chain['da_layer']\n",
+    "    is_superchain_registry = chain['superchain_registry']\n",
     "\n",
     "    try:\n",
     "        w3_conn = Web3(Web3.HTTPProvider(rpc))\n",
@@ -160,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
