--- a/op_chains_tracking/l2_revenue_tracking.ipynb
+++ b/op_chains_tracking/l2_revenue_tracking.ipynb
@@ -69,9 +69,9 @@
     "    chain_name = chain['chain_name']\n",
     "    print(chain_name)\n",
     "    rpc = chain['rpc_url']\n",
-    "    gas_token = chain['gas_token']\n",
-    "    da_layer = chain['da_layer']\n",
-    "    is_superchain_registry = chain['superchain_registry']\n",
+    "    # gas_token = chain['gas_token']\n",
+    "    # da_layer = chain['da_layer']\n",
+    "    # is_superchain_registry = chain['superchain_registry']\n",
     "\n",
     "    try:\n",
     "        w3_conn = Web3(Web3.HTTPProvider(rpc))\n",
@@ -102,8 +102,8 @@
     "                )\n",
     "            \n",
     "            tmp = pd.DataFrame(\n",
-    "                    [[block_time, block_number, chain_name, vault_name, vault_address, alltime_revenue_native, gas_token, da_layer, is_superchain_registry]]\n",
-    "                    ,columns =['block_time','block_number','chain_name','vault_name','vault_address','alltime_revenue_native','gas_token','da_layer','is_superchain_registry']\n",
+    "                    [[block_time, block_number, chain_name, vault_name, vault_address, alltime_revenue_native]]#, gas_token, da_layer, is_superchain_registry]]\n",
+    "                    ,columns =['block_time','block_number','chain_name','vault_name','vault_address','alltime_revenue_native']#,'gas_token','da_layer','is_superchain_registry']\n",
     "                    )\n",
     "            data_arr.append(tmp)\n",
     "            time.sleep(1)\n",
