--- a/op_chains_tracking/l2_revenue_tracking.ipynb
+++ b/op_chains_tracking/l2_revenue_tracking.ipynb
@@ -144,7 +144,9 @@
     "print(dune_df.sample(5))\n",
     "\n",
     "du.write_dune_api_from_pandas(dune_df, 'op_stack_chains_cumulative_revenue_snapshots',\\\n",
-    "                             'Snapshots of All-Time (cumulative) revenue for fee vaults on OP Stack Chains. Pulled from RPCs')"
+    "                             'Snapshots of All-Time (cumulative) revenue for fee vaults on OP Stack Chains. Pulled from RPCs - metadata in op_stack_chains_chain_rpc_metdata')\n",
+    "du.write_dune_api_from_pandas(chains_rpcs, 'op_stack_chains_chain_rpc_metdata',\\\n",
+    "                             'Chain metadata - used to join with op_stack_chains_cumulative_revenue_snapshots')"
    ]
   }
  ],
