--- a/op_chains_tracking/l2_revenue_tracking.ipynb
+++ b/op_chains_tracking/l2_revenue_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chain_name</th>\n",
+       "      <th>op_based_version</th>\n",
+       "      <th>has_mods</th>\n",
+       "      <th>is_law_of_chains</th>\n",
+       "      <th>raas_deployer</th>\n",
+       "      <th>rpc_url</th>\n",
+       "      <th>product_website</th>\n",
+       "      <th>gas_token</th>\n",
+       "      <th>da_layer</th>\n",
+       "      <th>superchain_registry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>op mainnet</td>\n",
+       "      <td>bedrock</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td></td>\n",
+       "      <td>https://mainnet.optimism.io</td>\n",
+       "      <td>https://optimism.io</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>ethereum</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>base</td>\n",
+       "      <td>bedrock</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td></td>\n",
+       "      <td>https://mainnet.base.org/</td>\n",
+       "      <td>https://base.org</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>ethereum</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>zora network</td>\n",
+       "      <td>bedrock</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>conduit</td>\n",
+       "      <td>https://rpc.zora.energy/</td>\n",
+       "      <td>https://zora.energy</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>ethereum</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>public goods network</td>\n",
+       "      <td>bedrock</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>conduit</td>\n",
+       "      <td>https://rpc.publicgoods.network/</td>\n",
+       "      <td>https://publicgoods.network/</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>ethereum</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>opbnb</td>\n",
+       "      <td>bedrock</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td></td>\n",
+       "      <td>https://opbnb-mainnet-rpc.bnbchain.org</td>\n",
+       "      <td>https://opbnb.bnbchain.org/en</td>\n",
+       "      <td>BNB</td>\n",
+       "      <td>bnb</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>manta pacific</td>\n",
+       "      <td>bedrock</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>caldera</td>\n",
+       "      <td>https://pacific-rpc.manta.network/http</td>\n",
+       "      <td>https://pacific.manta.network/</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>celestia</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>loot chain</td>\n",
+       "      <td>bedrock</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>caldera</td>\n",
+       "      <td>https://rpc.lootchain.com/http</td>\n",
+       "      <td>https://adventuregold.org/</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>polygon</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>kroma network</td>\n",
+       "      <td>bedrock</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td></td>\n",
+       "      <td>https://api.kroma.network/</td>\n",
+       "      <td>https://kroma.network/</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>ethereum</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>vienna</td>\n",
+       "      <td>bedrock</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>caldera</td>\n",
+       "      <td>https://vienna.calderachain.xyz/http</td>\n",
+       "      <td>https://vienna.caldera.dev/</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             chain_name op_based_version has_mods is_law_of_chains  \\\n",
+       "0            op mainnet          bedrock       no              yes   \n",
+       "1                  base          bedrock       no              yes   \n",
+       "2          zora network          bedrock       no               no   \n",
+       "3  public goods network          bedrock       no               no   \n",
+       "5                 opbnb          bedrock      yes               no   \n",
+       "6         manta pacific          bedrock      yes               no   \n",
+       "7            loot chain          bedrock      yes               no   \n",
+       "8         kroma network          bedrock      yes               no   \n",
+       "9                vienna          bedrock      yes               no   \n",
+       "\n",
+       "  raas_deployer                                  rpc_url  \\\n",
+       "0                            https://mainnet.optimism.io   \n",
+       "1                              https://mainnet.base.org/   \n",
+       "2       conduit                 https://rpc.zora.energy/   \n",
+       "3       conduit         https://rpc.publicgoods.network/   \n",
+       "5                 https://opbnb-mainnet-rpc.bnbchain.org   \n",
+       "6       caldera   https://pacific-rpc.manta.network/http   \n",
+       "7       caldera           https://rpc.lootchain.com/http   \n",
+       "8                             https://api.kroma.network/   \n",
+       "9       caldera     https://vienna.calderachain.xyz/http   \n",
+       "\n",
+       "                   product_website gas_token   da_layer superchain_registry  \n",
+       "0              https://optimism.io       ETH   ethereum                 yes  \n",
+       "1                 https://base.org       ETH   ethereum                 yes  \n",
+       "2              https://zora.energy       ETH   ethereum                 yes  \n",
+       "3     https://publicgoods.network/       ETH   ethereum                 yes  \n",
+       "5    https://opbnb.bnbchain.org/en       BNB        bnb                  no  \n",
+       "6   https://pacific.manta.network/       ETH   celestia                  no  \n",
+       "7       https://adventuregold.org/       ETH    polygon                  no  \n",
+       "8           https://kroma.network/       ETH   ethereum                  no  \n",
+       "9      https://vienna.caldera.dev/       ETH    unknown                  no  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# https://github.com/ethereum-optimism/optimism/blob/b86522036ad11a91de1d1dadb6805167add83326/specs/predeploys.md?plain=1#L50\n",
     "\n",
@@ -46,9 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Method ID: 0x84411d65\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the method signature hash\n",
     "method_signature = \"totalProcessed()\"\n",
@@ -59,9 +261,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "op mainnet\n",
+      "op mainnet | SequencerFeeVault: 1489676782078703420819 | bal: 21529266209823836208 | total eth: 1511.2060482885274\n",
+      "op mainnet | BaseFeeVault: 613440458297089430527 | bal: 10214455195607240478 | total eth: 623.6549134926967\n",
+      "op mainnet | L1FeeVault: 4210547361710568971100 | bal: 21265886429233641114 | total eth: 4231.813248139802\n",
+      "base\n",
+      "base | SequencerFeeVault: 1905192317840911911061 | bal: 308631895517794719983 | total eth: 2213.824213358707\n",
+      "base | BaseFeeVault: 442281139106418194815 | bal: 47015020508225048848 | total eth: 489.2961596146433\n",
+      "base | L1FeeVault: 1567676667751681489641 | bal: 417861078615464283370 | total eth: 1985.537746367146\n",
+      "zora network\n",
+      "zora network | SequencerFeeVault: 256842974805031609748 | bal: 2276341315953566845 | total eth: 259.11931612098516\n",
+      "zora network | BaseFeeVault: 0 | bal: 43915009123651 | total eth: 4.3915009123651e-05\n",
+      "zora network | L1FeeVault: 208754535130387528966 | bal: 702411080400734613 | total eth: 209.4569462107883\n",
+      "public goods network\n",
+      "public goods network | SequencerFeeVault: 0 | bal: 5709636749964074861 | total eth: 5.709636749964075\n",
+      "public goods network | BaseFeeVault: 0 | bal: 208471298600 | total eth: 2.084712986e-07\n",
+      "public goods network | L1FeeVault: 0 | bal: 2983469672184570338 | total eth: 2.98346967218457\n",
+      "opbnb\n",
+      "opbnb | SequencerFeeVault: 0 | bal: 297205051582090447394 | total eth: 297.20505158209045\n",
+      "opbnb | BaseFeeVault: 0 | bal: 6895585573793 | total eth: 6.895585573793e-06\n",
+      "opbnb | L1FeeVault: 0 | bal: 180559097229201943840 | total eth: 180.55909722920194\n",
+      "manta pacific\n",
+      "manta pacific | SequencerFeeVault: 1000038904000000000 | bal: 22339434740967843400 | total eth: 23.339473644967843\n",
+      "manta pacific | BaseFeeVault: 0 | bal: 39473753525603 | total eth: 3.9473753525603e-05\n",
+      "manta pacific | L1FeeVault: 0 | bal: 17285097458665806038 | total eth: 17.285097458665806\n",
+      "loot chain\n",
+      "kroma network\n",
+      "vienna\n",
+      "vienna | SequencerFeeVault: 0 | bal: 123059148164235500 | total eth: 0.12305914816423551\n",
+      "vienna | BaseFeeVault: 0 | bal: 32599137216 | total eth: 3.2599137216e-08\n",
+      "vienna | L1FeeVault: 0 | bal: 6481419596103940 | total eth: 0.00648141959610394\n"
+     ]
+    }
+   ],
    "source": [
     "data_arr = []\n",
     "\n",
@@ -115,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,9 +372,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                block_time  block_number            chain_name    vault_name  \\\n",
+      "12253  2023-10-08 13:00:27     110585625            op mainnet  BaseFeeVault   \n",
+      "8366   2023-09-29 10:00:57       4227934                 opbnb  BaseFeeVault   \n",
+      "386    2023-09-07 19:59:57       2505035  public goods network    L1FeeVault   \n",
+      "478    2023-09-08 02:07:24       2385121                 opbnb  BaseFeeVault   \n",
+      "10667  2023-10-04 20:00:09        222565         manta pacific    L1FeeVault   \n",
+      "\n",
+      "                                    vault_address  alltime_revenue_native  \\\n",
+      "12253  0x4200000000000000000000000000000000000019              591.615370   \n",
+      "8366   0x4200000000000000000000000000000000000019                0.000005   \n",
+      "386    0x420000000000000000000000000000000000001A                2.840150   \n",
+      "478    0x4200000000000000000000000000000000000019                0.000001   \n",
+      "10667  0x420000000000000000000000000000000000001A                9.519657   \n",
+      "\n",
+      "      gas_token   da_layer is_superchain_registry  \n",
+      "12253       ETH   ethereum                    yes  \n",
+      "8366        BNB        bnb                     no  \n",
+      "386         ETH   ethereum                    yes  \n",
+      "478         BNB        bnb                     no  \n",
+      "10667       ETH   celestia                     no  \n",
+      "table at: dune.oplabspbc.dataset_op_stack_chains_cumulative_revenue_snapshots\n",
+      "Response status code: 200\n",
+      "Response content: b'{\"success\":true}'\n",
+      "table at: dune.oplabspbc.dataset_op_stack_chains_chain_rpc_metdata\n",
+      "Response status code: 200\n",
+      "Response content: b'{\"success\":true}'\n"
+     ]
+    }
+   ],
    "source": [
     "# Write to Dune Table\n",
     "\n",
