--- a/other_chains_tracking/chain_tvl_trends.ipynb
+++ b/other_chains_tracking/chain_tvl_trends.ipynb
@@ -42,6 +42,10 @@
     "    ,['Polygon zkEVM', 'L2']\n",
     "    ,['Starknet', 'L2']\n",
     "    ,['Linea', 'L2']\n",
+    "    ,['Mantle', 'L2']\n",
+    "    ,['Scroll', 'L2']\n",
+    "    ,['Boba', 'L2']\n",
+    "    ,['Rollux', 'L2']\n",
     "    #L1\n",
     "    ,['Ethereum', 'L1']\n",
     "    #Others\n",
@@ -137,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
