--- a/other_chains_tracking/chain_tvl_trends.ipynb
+++ b/other_chains_tracking/chain_tvl_trends.ipynb
@@ -45,6 +45,8 @@
     "    ,['Mantle', 'L2']\n",
     "    ,['Scroll', 'L2']\n",
     "    ,['Boba', 'L2']\n",
+    "    ,['Metis', 'L2']\n",
+    "    ,['opBNB', 'L2']\n",
     "    ,['Rollux', 'L2']\n",
     "    #L1\n",
     "    ,['Ethereum', 'L1']\n",
