--- a/other_chains_tracking/pull_l2_activity.ipynb
+++ b/other_chains_tracking/pull_l2_activity.ipynb
@@ -34,9 +34,20 @@
     "# # # Usage\n",
     "gtp_api = gtp.get_growthepie_api_data()\n",
     "gtp_meta_api = gtp.get_growthepie_api_meta()\n",
-    "gtp_api = gtp_api.rename(columns={\"date\": \"dt\"})\n",
+    "gtp_api = gtp_api.rename(columns={\"date\": \"dt\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update datatype for bq uploads\n",
+    "gtp_meta_api[\"enable_contracts\"] = gtp_meta_api[\"enable_contracts\"].astype(bool)\n",
     "\n",
-    "gtp_meta_api[\"enable_contracts\"] = gtp_meta_api[\"enable_contracts\"].astype(bool)"
+    "# convert all datatype that is object to strings\n",
+    "gtp_api = gtp_api.applymap(lambda x: str(x) if isinstance(x, object) else x)"
    ]
   },
   {
