--- a/other_chains_tracking/pull_l2_activity.ipynb
+++ b/other_chains_tracking/pull_l2_activity.ipynb
@@ -44,10 +44,11 @@
    "outputs": [],
    "source": [
     "# update datatype for bq uploads\n",
-    "gtp_meta_api[\"enable_contracts\"] = gtp_meta_api[\"enable_contracts\"].astype(bool)\n",
+    "if \"enable_contracts\" in gtp_meta_api:\n",
+    "    gtp_meta_api[\"enable_contracts\"] = gtp_meta_api[\"enable_contracts\"].astype(bool)\n",
     "\n",
-    "# convert all datatype that is object to strings\n",
-    "gtp_api = gtp_api.applymap(lambda x: str(x) if isinstance(x, object) else x)"
+    "if \"colors\" in gtp_meta_api:\n",
+    "    gtp_meta_api[\"colors\"] = gtp_meta_api[\"colors\"].astype(str)"
    ]
   },
   {
