add more contracts
Former-commit-id: a78c9e62ed6cf57579273b60c9e218978cc86208

--- a/other_chains_tracking/get_contract_labels.ipynb
+++ b/other_chains_tracking/get_contract_labels.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start contract labels\n"
+     ]
+    }
+   ],
    "source": [
     "print('start contract labels')\n",
     "import sys\n",
@@ -21,47 +29,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gtp_contracts_api = 'https://api.growthepie.xyz/v1/contracts.json'\n",
-    "table_name = 'contract_labels_growthepie'"
+    "api_configs = {\n",
+    "    # 'old_gtp': {\n",
+    "    #     'url': 'https://api.growthepie.xyz/v1/contracts.json',\n",
+    "    #     'table_name': 'contract_labels_growthepie'\n",
+    "    # },\n",
+    "    'oli_gtp': {\n",
+    "        'url': 'https://api.growthepie.xyz/test/oli_labels.json',\n",
+    "        'table_name': 'oli_contract_labels_growthepie'\n",
+    "    }\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "address                object\n",
+      "chain_id               object\n",
+      "name                   object\n",
+      "owner_project          object\n",
+      "usage_category         object\n",
+      "is_factory_contract    object\n",
+      "address_original       object\n",
+      "dtype: object\n",
+      "Processed data for oli_gtp:\n",
+      "Table name: oli_contract_labels_growthepie\n",
+      "Existing data in table 'oli_contract_labels_growthepie' has been deleted.\n",
+      "Data written to table 'oli_contract_labels_growthepie' successfully, replacing previous data.\n",
+      "clickhouse complete\n",
+      "Start Writing api_table_uploads.oli_contract_labels_growthepie\n",
+      "Data loaded successfully to api_table_uploads.oli_contract_labels_growthepie\n",
+      "bq complete\n",
+      "Table name: oli_contract_labels_growthepie\n",
+      "Number of rows: 90481\n",
+      "---\n"
+     ]
+    }
+   ],
    "source": [
-    "# Fetch data from API\n",
-    "response = r.get(gtp_contracts_api)\n",
-    "data = response.json()\n",
+    "def fetch_and_process_data(url):\n",
+    "    response = r.get(url)\n",
+    "    data = response.json()\n",
+    "    df = pd.DataFrame(data)\n",
+    "    df['address_original'] = df['address']\n",
+    "    df['address'] = df['address'].str.lower()\n",
     "\n",
-    "df = pd.DataFrame(data)\n",
+    "    # If 'is_factory_contract' exists, fill nulls with 'false'\n",
+    "    if 'is_factory_contract' in df.columns:\n",
+    "        df['is_factory_contract'] = df['is_factory_contract'].fillna('false')\n",
     "\n",
-    "# Force addresses to lowercase\n",
-    "df['address_original'] = df['address']\n",
-    "df['address'] = df['address'].str.lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ch.write_df_to_clickhouse(df, table_name, if_exists='replace')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bqu.write_df_to_bq_table(df, table_name)"
+    "    # Convert all object columns to strings\n",
+    "    object_columns = df.select_dtypes(include=['object']).columns\n",
+    "    df[object_columns] = df[object_columns].astype(str)\n",
+    "    return df\n",
+    "\n",
+    "# Iterate through the configurations\n",
+    "for config_name, config in api_configs.items():\n",
+    "    df = fetch_and_process_data(config['url'])\n",
+    "    # You can now use df and config['table_name'] as needed\n",
+    "    print(f\"Processed data for {config_name}:\")\n",
+    "    print(f\"Table name: {config['table_name']}\")\n",
+    "    ch.write_df_to_clickhouse(df, config['table_name'], if_exists='replace')\n",
+    "    print('clickhouse complete')\n",
+    "    bqu.write_df_to_bq_table(df, config['table_name'])\n",
+    "    print('bq complete')\n",
+    "    print(f\"Table name: {config['table_name']}\")\n",
+    "    print(f\"Number of rows: {len(df)}\")\n",
+    "    print(\"---\")\n",
+    "    "
    ]
   }
  ],
