--- a/other_chains_tracking/get_qualified_txs.ipynb
+++ b/other_chains_tracking/get_qualified_txs.ipynb
@@ -190,11 +190,14 @@
     "                ch_dfs.append(df)\n",
     "        except:\n",
     "                print('unable to process ' + chain['blockchain'])\n",
-    "\n",
-    "ch = pd.concat(ch_dfs)\n",
-    "ch['source'] = 'goldsky'\n",
-    "ch['dt'] = pd.to_datetime(ch['dt']).dt.tz_localize(None)\n",
-    "ch = ch[col_list]"
+    "if ch_dfs:\n",
+    "    ch = pd.concat(ch_dfs)\n",
+    "    ch['source'] = 'goldsky'\n",
+    "    ch['dt'] = pd.to_datetime(flip['dt']).dt.tz_localize(None)\n",
+    "    ch = ch[col_list]\n",
+    "else:\n",
+    "    print(\"No data was retrieved from Goldsky. The resulting DataFrame will be empty.\")\n",
+    "    ch = pd.DataFrame(columns=col_list)"
    ]
   },
   {
@@ -1811,9 +1814,13 @@
     "    params = [days_param,chain_ids_param],\n",
     "    num_hours_to_rerun=0 #always rerun due to param\n",
     ")\n",
-    "dune_df['source'] = 'dune'\n",
-    "dune_df['dt'] = pd.to_datetime(dune_df['dt']).dt.tz_localize(None)\n",
-    "dune_df = dune_df[col_list]"
+    "if dune_df:\n",
+    "    dune_df['source'] = 'dune'\n",
+    "    dune_df['dt'] = pd.to_datetime(flip['dt']).dt.tz_localize(None)\n",
+    "    dune_df = dune_df[col_list]\n",
+    "else:\n",
+    "    print(\"No data was retrieved from Dune. The resulting DataFrame will be empty.\")\n",
+    "    dune_df = pd.DataFrame(columns=col_list)"
    ]
   },
   {
